<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="np.com.rahulrajbanshi.rnotes.activity.MainActivity">

    <item
        android:id="@+id/action_new_note"
        android:orderInCategory="100"
        android:title="@string/action_new_note"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_add"/>

    <item
        android:id="@+id/action_backup_notes"
        android:orderInCategory="101"
        android:title="@string/action_backup_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restore_notes"
        android:orderInCategory="102"
        android:title="@string/action_restore_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="103"
        android:title="@string/action_delete_all_notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create_sample"
        android:orderInCategory="104"
        android:title="@string/action_create_sample_notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="105"
        android:title="@string/action_title_activity_about"
        app:showAsAction="never" />

</menu>
