<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="np.com.rahulrajbanshi.rnotes.activity.EditorActivity">

    <item
        android:id="@+id/action_note_colour"
        android:orderInCategory="101"
        android:title="@string/action_note_colour"
        android:icon="@drawable/ic_note_colour"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="103"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_font_size"
        android:title="@string/action_font_size"
        android:orderInCategory="105"
        app:showAsAction="never" />

    <item android:id="@+id/action_hide_show_body"
        android:title="@string/action_hide_note_body_in_list"
        android:orderInCategory="107"
        app:showAsAction="never" />
</menu>
